syntax="proto3";
package org.medimate.grpc;
option java_multiple_files =true;

message SystemEventRequest {
  string timestamp=1;
  string microserviceName=2;
  string user=3;
  string action=4;
  string resource=5;
  string responseType=6;
}

message SystemEventResponse{
  string response=1;
}

service SystemEventsService{
  rpc systemEventLog(SystemEventRequest) returns (SystemEventResponse);
}